splitview: Fix crash when trying to open an unsnappable window in splitv.

Behaviour matches android now.

Test: ash_unittests SplitViewWindowSelectorTest.SelectUnsnappableWindowInSplitView
Bug: 775682
Change-Id: I9e3a6c321ea2c871b1cc7d438f8b70228030a2a1
Reviewed-on: https://chromium-review.googlesource.com/724212
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510154}
Former-commit-id: 6e01fbc91326fc13322d4aa5d94b1c74a1f8eae6